tests/baselines/reference/assignmentCompatability21.errors.txt
assignmentCompatability21.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
assignmentCompatability21.ts(5,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
assignmentCompatability21.ts(9,1): error TS2322: Type 'interfaceWithPublicAndOptional<number, string>' is not assignable to type '{ two: string[]; }'.
  Types of property 'two' are incompatible.
    Type 'string' is not assignable to type 'string[]'.


==== assignmentCompatability21.ts (3 errors) ====
    module __test1__ {
           ~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
           ~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var obj = {two: ["1"]};
        export var __val__obj = obj;
    }
    __test2__.__val__obj = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'interfaceWithPublicAndOptional<number, string>' is not assignable to type '{ two: string[]; }'.
!!! error TS2322:   Types of property 'two' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'string[]'.